// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Disabled variants should render disabled button component contained 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={true}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#bbbbbb",
          "borderColor": "#FFFFFF00",
          "borderRadius": 4,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={true}
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="contained"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Disabled variants should render disabled button component outlined 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={true}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF00",
          "borderColor": "#bbbbbb",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="outlined"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={true}
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#777777",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="outlined"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Disabled variants should render disabled button component text 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={true}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF00",
          "borderColor": "#FFFFFF00",
          "borderRadius": 4,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="text"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={true}
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#777777",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="text"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component contained 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#f4ab34",
          "borderColor": "#FFFFFF00",
          "borderRadius": 4,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={false}
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="contained"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component outlined 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF00",
          "borderColor": "#f4ab34",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="outlined"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={false}
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="outlined"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component text 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF00",
          "borderColor": "#FFFFFF00",
          "borderRadius": 4,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="text"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={false}
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="text"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component with Icon should render the icon to the left 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#f4ab34",
          "borderColor": "#FFFFFF00",
          "borderRadius": 4,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="left"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <Text
        disabled={false}
        iconName="outlined-default-mockup"
        iconPosition="left"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 0,
              "marginStart": 8,
            },
          ]
        }
        testID="button-label"
        type="contained"
      >
        BUTTON LABEL
      </Text>
      <Text
        accessibilityRole="imagebutton"
        name="outlined-default-mockup"
        size="small"
        style={
          Object {
            "color": "#333333",
          }
        }
      >
        outlined-default-mockup
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component with Icon should render the icon to the right by default 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
    }
  }
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#f4ab34",
          "borderColor": "#FFFFFF00",
          "borderRadius": 4,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        disabled={false}
        iconName="outlined-default-mockup"
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "Roboto",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 8,
              "marginStart": 0,
            },
          ]
        }
        testID="button-label"
        type="contained"
      >
        BUTTON LABEL
      </Text>
      <Text
        accessibilityRole="imagebutton"
        name="outlined-default-mockup"
        size="small"
        style={
          Object {
            "color": "#333333",
          }
        }
      >
        outlined-default-mockup
      </Text>
    </View>
  </View>
</View>
`;
